# telco-churn-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  predict.py  schemas.py
flows/: pipeline.py
src/: __init__.py  evaluate.py  ingest.py  monitor.py  preprocess.py  register.py  retrain_trigger.py  train.py
tests/: test_drift.py  test_predict.py  test_preprocess.py
