[project]
name = "telco-churn-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "evidently>=0.7.21",
    "kagglehub>=1.0.1",
    "kagglesdk<0.1.24",
    "matplotlib>=3.10.9",
    "mlflow>=2.13.0",
    "numpy<2",
    "pandas>=2.0,<3",
    "protobuf==3.20.3",
    "scikit-learn==1.2.2",
    "setuptools<81",
]
